tests/tests/ui/not_valuable.stderr
error[E0277]: the trait bound `S: Valuable` is not satisfied
 --> tests/ui/not_valuable.rs:7:8
  |
5 | #[derive(Valuable)]
  |          -------- required by a bound introduced by this call
6 | struct Struct {
7 |     f: Option<S>,
  |        ^^^^^^^^^ the trait `Valuable` is not implemented for `S`
  |
  = note: required because of the requirements on the impl of `Valuable` for `Option<S>`

error[E0277]: the trait bound `S: Valuable` is not satisfied
 --> tests/ui/not_valuable.rs:5:10
  |
5 | #[derive(Valuable)]
  |          ^^^^^^^^ the trait `Valuable` is not implemented for `S`
  |
  = note: required because of the requirements on the impl of `Valuable` for `Option<S>`
  = note: this error originates in the derive macro `Valuable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: Valuable` is not satisfied
  --> tests/ui/not_valuable.rs:11:14
   |
10 | #[derive(Valuable)]
   |          -------- required by a bound introduced by this call
11 | struct Tuple(Option<S>);
   |              ^^^^^^^^^ the trait `Valuable` is not implemented for `S`
   |
   = note: required because of the requirements on the impl of `Valuable` for `Option<S>`

error[E0277]: the trait bound `S: Valuable` is not satisfied
  --> tests/ui/not_valuable.rs:10:10
   |
10 | #[derive(Valuable)]
   |          ^^^^^^^^ the trait `Valuable` is not implemented for `S`
   |
   = note: required because of the requirements on the impl of `Valuable` for `Option<S>`
   = note: this error originates in the derive macro `Valuable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: Valuable` is not satisfied
  --> tests/ui/not_valuable.rs:15:17
   |
13 | #[derive(Valuable)]
   |          -------- required by a bound introduced by this call
14 | enum Enum {
15 |     Struct { f: Option<S> },
   |                 ^^^^^^^^^ the trait `Valuable` is not implemented for `S`
   |
   = note: required because of the requirements on the impl of `Valuable` for `Option<S>`
   = note: 1 redundant requirement hidden
   = note: required because of the requirements on the impl of `Valuable` for `&Option<S>`

error[E0277]: the trait bound `S: Valuable` is not satisfied
  --> tests/ui/not_valuable.rs:16:11
   |
13 | #[derive(Valuable)]
   |          -------- required by a bound introduced by this call
...
16 |     Tuple(Option<S>),
   |           ^^^^^^^^^ the trait `Valuable` is not implemented for `S`
   |
   = note: required because of the requirements on the impl of `Valuable` for `Option<S>`
   = note: 1 redundant requirement hidden
   = note: required because of the requirements on the impl of `Valuable` for `&Option<S>`
